{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 174,
  "lineage": "e7e749a1-ba34-c562-fea8-6696affd2bd9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "api_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.69.112.195",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-27T11:19:33.362-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/spry-pipe-425611-c4/regions/us-central1/addresses/vexa-gcp-vpc-api-gw-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "vexa-gcp-vpc-api-gw-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "spry-pipe-425611-c4",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/regions/us-central1/addresses/vexa-gcp-vpc-api-gw-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nomad_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.41.41.128",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-27T11:19:32.829-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/spry-pipe-425611-c4/regions/us-central1/addresses/vexa-gcp-vpc-nomad-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "vexa-gcp-vpc-nomad-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "spry-pipe-425611-c4",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/regions/us-central1/addresses/vexa-gcp-vpc-nomad-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admin-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-27T10:55:44.715-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-admin-api",
            "log_config": [],
            "name": "vexa-gcp-vpc-allow-admin-api",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "priority": 1000,
            "project": "spry-pipe-425611-c4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-admin-api",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "core"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "core"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-api-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8926"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-27T10:27:50.122-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-api-gateway",
            "log_config": [],
            "name": "vexa-gcp-vpc-allow-api-gateway",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "priority": 1000,
            "project": "spry-pipe-425611-c4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-api-gateway",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "core"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-27T02:57:44.958-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-internal",
            "log_config": [],
            "name": "vexa-gcp-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "priority": 1000,
            "project": "spry-pipe-425611-c4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-nomad-consul",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4646",
                  "4647",
                  "4648",
                  "8300",
                  "8301",
                  "8302",
                  "8500",
                  "8502",
                  "8600"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "4648",
                  "8301",
                  "8302",
                  "8600"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-06-27T03:11:22.112-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-nomad-consul",
            "log_config": [],
            "name": "vexa-gcp-vpc-allow-nomad-consul",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "priority": 1000,
            "project": "spry-pipe-425611-c4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-nomad-consul",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-27T10:50:48.352-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-redis",
            "log_config": [],
            "name": "vexa-gcp-vpc-allow-redis",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "priority": 1000,
            "project": "spry-pipe-425611-c4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-redis",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "core"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "core"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-27T02:57:44.724-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-ssh",
            "log_config": [],
            "name": "vexa-gcp-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "priority": 1000,
            "project": "spry-pipe-425611-c4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-web-ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4646",
                  "8500"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-27T03:11:22.232-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-web-ui",
            "log_config": [],
            "name": "vexa-gcp-vpc-allow-web-ui",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "priority": 1000,
            "project": "spry-pipe-425611-c4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/firewalls/vexa-gcp-vpc-allow-web-ui",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "management"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "cloudsql_private_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.85.13.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-06-27T04:46:08.547-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/spry-pipe-425611-c4/global/addresses/cloudsql-dev-private-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cloudsql-dev-private-range",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "prefix_length": 24,
            "project": "spry-pipe-425611-c4",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/addresses/cloudsql-dev-private-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "mtu": 1460,
            "name": "vexa-gcp-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1677445462442104291",
            "numeric_id": "1677445462442104291",
            "project": "spry-pipe-425611-c4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "bots",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T02:57:44.707-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.2.1",
            "id": "projects/spry-pipe-425611-c4/regions/us-central1/subnetworks/bots-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "bots-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "spry-pipe-425611-c4",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/regions/us-central1/subnetworks/bots-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6179256407732508151
          },
          "dependencies": [
            "google_compute_network.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T03:11:22.729-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.3.1",
            "id": "projects/spry-pipe-425611-c4/regions/us-central1/subnetworks/core-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "core-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "spry-pipe-425611-c4",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/regions/us-central1/subnetworks/core-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3263200950662451365
          },
          "dependencies": [
            "google_compute_network.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T02:57:45.310-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/spry-pipe-425611-c4/regions/us-central1/subnetworks/management-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/global/networks/vexa-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "spry-pipe-425611-c4",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spry-pipe-425611-c4/regions/us-central1/subnetworks/management-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6569548680149587446
          },
          "dependencies": [
            "google_compute_network.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}